--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -12,8 +12,9 @@ $padding-x-small: 3%;
 
 // Brand colours
 $theme-color: #337ab7;
-$brand-color: #fff;
-$background-color: #fff;
+$brand-color: #EBEBEB;
+// $background-color: #fff;
+$background-color: #EBEBEB;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
